[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/power_ups/sleep_power_up.gd" type="Script" id=1]
[ext_resource path="res://assets/images/powerUps/sleep_powerUp.png" type="Texture" id=2]
[ext_resource path="res://scenes/power_ups/sleeping_time.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 82.716

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 15.1288

[node name="sleep_power_up" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="power_up_body" type="Area2D" parent="."]
editor/display_folded = true
input_pickable = false
collision_layer = 2048
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="power_up_body"]
shape = SubResource( 1 )

[node name="power_up_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.77667, 1.00403 )
scale = Vector2( 6.61368, 6.78707 )

[node name="up" type="RayCast2D" parent="."]
position = Vector2( 0, -80 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, -20 )
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[node name="down" type="RayCast2D" parent="."]
position = Vector2( 0, 80 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 20 )
collision_mask = 256
collide_with_areas = true
collide_with_bodies = false

[node name="sleeping_time" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
script = ExtResource( 3 )
[connection signal="area_entered" from="power_up_body" to="." method="_on_power_up_body_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="sleeping_time" to="sleeping_time" method="_on_sleeping_time_timeout"]
